# finly-app

./: .eslintrc.js  .gitignore  .prettierrc.js  App.tsx  README.md  app.json  babel.config.js  jest.config.js  jest.setup.js  metro.config.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml
__mocks__/: victory-native.js
android/: build.gradle  gradle.properties  link-assets-manifest.json  settings.gradle
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/finlyapp/: MainActivity.kt  MainApplication.kt
android/app/src/main/res/values/: strings.xml
docs/: INSTALL.md
ios/: Podfile
ios/FinlyApp/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/FinlyApp.xcodeproj/: project.pbxproj
patches/: @react-native+gradle-plugin+0.79.3.patch
scripts/: build.sh
src/components/auth/: PinInput.tsx
src/components/common/: Button.tsx  Card.tsx  DateRangePickerModal.tsx  Input.tsx  OCRScanButton.tsx  (+1 more)
src/constants/: categories.ts  periodOptions.ts
src/hooks/: useAuth.ts  useBalance.ts  useOCR.ts  useTransactions.ts
src/i18n/: en.json  id.json  index.ts
src/navigation/: AppNavigator.tsx  BottomTabs.tsx
src/screens/: AddTransactionScreen.tsx  AuthScreen.tsx  DashboardScreen.tsx  OnboardingScreen.tsx  SettingsScreen.tsx  StatisticsScreen.tsx  TransactionHistoryScreen.tsx
src/store/: AppContext.tsx
src/themes/: colors.ts
src/types/: AppContext.ts  Transaction.ts  global.d.ts  navigation.ts
src/utils/: currencyUtils.ts  dateUtils.ts  ocrUtils.ts
(+54 files in other folders)
